@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-11-18T00:31:48Z",
-  "count_outdated" : 466,
-  "uniques_outdated" : 296,
+  "timestamp" : "2023-11-19T08:08:08Z",
+  "count_outdated" : 467,
+  "uniques_outdated" : 297,
   "count" : 468,
   "uniques" : 298,
   "clones" : [
-    {
-      "timestamp": "2023-11-05T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-11-15T00:00:00Z",
       "count": 1,
