@@ -1,3 +1,12 @@
+2023-11-19T08:08:08Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6919269579 # 2055
+* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-19
+* notice: last 14d: unq all: 1 1
+* notice: prev accum: outdated-unq outdated-all / unq all: 296 466 / 298 468
+* notice: next accum: outdated-unq outdated-all / unq all: 297 467 / 298 468
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-11-05] / []
+
 2023-11-18T00:31:48Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6910548548 # 2051
 * notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-18
